# tuesday

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  c.md  docs.md  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: codebase.md  constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
benchmarks/phase-3/: initial-baseline.json
docs/: 00-core-brief.md  01-tong-quan-du-an.md  02-kien-truc-tong-the.md  03-domain-model.md  04-ports-va-adapters.md  05-use-case-ingestion.md  06-use-case-retrieval.md  07-use-case-generation.md  08-api-contract.md  09-test-strategy.md  11-glossary.md  12-review-tong-hop.md  13-checklist-truoc-khi-code.md  14-decision-log.md  15-golden-cases-va-fixtures.md  16-implementation-guardrails.md
docs/core/: 55-core-track-overview.md  56-spec-retrieval-core-hardening-v1.md  57-spec-provider-integration-and-runtime-lifecycle-v1.md  58-spec-real-vector-store-adapter-v1.md  59-spec-generation-context-policy-v1.md  60-spec-provider-runtime-implementation-v1.md  README.md
docs/history/: 10-ke-hoach-trien-khai-theo-sprint.md  12-review-tong-hop.md  13-checklist-truoc-khi-code.md  54-closeout-post-mvp.md  README.md
docs/post-mvp/: 17-tong-quan-giai-doan-sau-mvp.md  18-spec-stabilize-va-hardening.md  19-spec-danh-gia-chat-luong-va-mo-rong.md  20-ke-hoach-trien-khai-sau-mvp.md  21-checklist-giai-doan-sau-mvp.md  40-spec-quyet-dinh-migration-cau-truc-src.md  41-spec-target-layout-migration-phase-4.md
examples/: onboarding-policy.txt  refund-policy.html  refund-policy.md
prompt/: first-prompt-review.md  first-prompt.md
scripts/: benchmark_quality.py  index_directory.py  index_file.py  smoke_test.py
specs/001-llamaindex-qdrant-adapter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/tuesday/: __init__.py
tests/: conftest.py  fixtures.py
(+160 files in other folders)
